# FastEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  C__accessLock_8hpp_source.html  C__alloca_8hpp_source.html  C__animation_8hpp_source.html  C__bitBank_8hpp_source.html  C__bitBank_8inl_source.html  C__blendMode_8hpp_source.html  C__callback_8hpp_source.html  C__callback_8inl_source.html  C__childObjectsAccessor_8hpp_source.html  C__circleShape_8hpp_source.html  C__clientList_8hpp_source.html  C__client_8hpp_source.html  C__client_8inl_source.html  C__clock_8hpp_source.html  C__color_8hpp_source.html  C__commandBuffer_8hpp_source.html  C__commandHandler_8hpp_source.html  C__concavePolygon_8hpp_source.html  C__contextAware_8hpp_source.html  C__context_8hpp_source.html  C__dataAccessor_8hpp_source.html  C__descriptorPool_8hpp_source.html  C__descriptorSetLayout_8hpp_source.html  C__descriptorSet_8hpp_source.html  C__drawable_8hpp_source.html  C__eventList_8hpp_source.html  C__event_8hpp_source.html  C__flag_8hpp_source.html  C__font_8hpp_source.html  C__ftFont_8hpp_source.html  C__garbageCollector_8hpp_source.html  C__glyph_8hpp_source.html  C__graphicPipeline_8hpp_source.html  C__guiElement_8hpp_source.html  C__identity_8hpp_source.html  C__instance_8hpp_source.html  (+722 more)
.github/: FUNDING.yml
.github/workflows/: check_clang-format.yml  cmake_linux_clang_32bit.yml  cmake_linux_clang_64bit.yml  cmake_linux_gcc_32bit.yml  cmake_linux_gcc_64bit.yml  cmake_macos.yml  cmake_windows_mingw-w64-i686.yml  cmake_windows_mingw-w64-x86_64.yml  cmake_windows_mingw-w64.yml  codeql.yml
d0/d00/: structSpvReflectImageTraits-members.html
d0/d03/: classfge_1_1ObjSpriteBatches.html
d0/d0b/: structSpvReflectShaderModule_1_1Internal-members.html
d0/d20/: structfge_1_1RenderResourcePushConstants_1_1PushConstantData.html
d0/d23/: structfge_1_1vulkan_1_1GarbageFramebuffer.html
d0/d26/: structfge_1_1vulkan_1_1DescriptorSet_1_1Descriptor-members.html
d0/d2e/: classfge_1_1net_1_1ServerNetFluxUdp-members.html  structfge_1_1anim_1_1DataBlock-members.html
d0/d32/: classfge_1_1anim_1_1AnimationManager-members.html  structfge_1_1net_1_1ClientList_1_1Data.html
d0/d35/: classfge_1_1anim_1_1AnimationManager.html
d0/d37/: structfast__float_1_1int__luts.html
d0/d3b/: path__manager_8hpp_source.html
d0/d4d/: classfge_1_1ObjTextInputBox-members.html
d0/d53/: structfge_1_1texture_1_1TextureData-members.html
d0/d55/: C__packet_8hpp_source.html
d0/d5b/: classfge_1_1ObjRenderMap.html
d0/d61/: classfge_1_1GuiElementDefault-members.html  structfge_1_1vulkan_1_1LayoutPipeline_1_1Key_1_1Compare-members.html
d0/d67/: classfge_1_1Event-members.html
d0/d78/: C__task_8inl_source.html
d0/d80/: classfge_1_1ObjSlider.html
d0/d8d/: classfge_1_1net_1_1NetFluxUdp-members.html
d0/d90/: structfge_1_1shader_1_1DataBlock-members.html
d0/d91/: structfge_1_1net_1_1ClientList_1_1Event.html
d0/d98/: C__property_8hpp_source.html
d0/d9d/: structfge_1_1vulkan_1_1GarbagePipelineLayout-members.html
d0/da0/: classfge_1_1texture_1_1TextureManager-members.html
d0/dab/: spirv_8h_source.html
d0/dae/: classfge_1_1LightObstacle.html
d0/db3/: structfge_1_1texture_1_1DataBlock.html
d0/dbb/: classfge_1_1Event.html  classfge_1_1RenderResourceTransform-members.html  structfge_1_1net_1_1Identity-members.html
d0/dbd/: classfge_1_1vulkan_1_1Shader.html
d0/dc1/: network__manager_8hpp_source.html
d0/dc4/: classfge_1_1CallbackBase-members.html
d0/dca/: C__callback_8hpp_source.html
d0/de4/: structfge_1_1manager_1_1GlobalDataAccessorManagerInfo-members.html
d0/de7/: structfast__float_1_1is__supported__float__type.html
d0/dec/: classfge_1_1Glyph.html
d0/df9/: C__dataAccessor_8hpp_source.html
d1/d04/: classfge_1_1Anchor-members.html
d1/d07/: classfge_1_1CommandHandler-members.html  structfge_1_1audio_1_1MixerChunkDeleter.html
d1/d0e/: classfge_1_1PropertyClassWrapperType-members.html
d1/d4d/: group__audio.html
docs/: Doxyfile.in
examples/clientServerLifeSimulator_004/client/: CMakeLists.txt  main.cpp
examples/clientServerLifeSimulator_004/server/: CMakeLists.txt  main.cpp
examples/deepText_005/: CMakeLists.txt  main.cpp
examples/shaderChain_009/: CMakeLists.txt  main.cpp
examples/shaderChain_009/shaders/: shader.geom  shader.vert
fge_install/: .gitignore  CMakeLists.txt  main.cpp
includes/: tinyutf8.h
libs/: get_libbzip2.sh  get_libfmt.sh  get_liblz4.sh  get_libpcg-cpp.sh  get_libre2.sh  get_libsfml.sh  get_libstrtk.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  (+98 more)
shaders/: fragment.frag  fragmentTexture.frag  vertex.vert
sources/: C_animation.cpp  C_childObjectsAccessor.cpp  C_client.cpp  C_clientList.cpp  C_commandHandler.cpp  C_compressorBZ2.cpp  C_compressorLZ4.cpp  C_concavePolygon.cpp  C_event.cpp  C_eventList.cpp  C_font.cpp  C_guiElement.cpp  C_ipAddress.cpp  C_networkType.cpp  C_objAnim.cpp  C_objButton.cpp  C_objLight.cpp  C_objRenderMap.cpp  C_objSelectBox.cpp  C_objSprite.cpp  C_objSwitch.cpp  C_objText.cpp  C_objTextNew.cpp  C_objTextinputbox.cpp  C_objTilemap.cpp  C_object.cpp  C_packet.cpp  C_packetBZ2.cpp  C_packetLZ4.cpp  C_property.cpp  C_quad.cpp  C_random.cpp  C_scene.cpp  C_sceneUpdateCache.cpp  C_server.cpp  C_socket.cpp  C_soundBuffer.cpp  C_subscription.cpp  C_tagList.cpp  C_task.cpp  (+24 more)
test/: LightFS.frag  LightFS.txt  myscene.json  objtst.json  testTiled.tsx  testTileset.json  testset.json  testset.tsx  tiledMap.json  tiledMap.tmx  yes.json
tests/: CMakeLists.txt  doctestMain.cpp  test_fge_callback.cpp  test_fge_extra_string.cpp  test_fge_matrix.cpp
tools/: CMakeInterfaceLibs.txt
version/: fastengine_version.hpp.in  fge_version.hpp.in
(+1139 files in other folders)
